hw6 refactored and some cleanup